tests/programs/invalid/instance_initializers.java
public class instance_initializers {
  public int x;
  { x = 42; }
}